--- a/index.html
+++ b/index.html
@@ -4,6 +4,44 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Architect Force</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reactflow@11.10.1/dist/style.min.css" />
+    <style>
+      /* Salesforce-like Scrollbar */
+      ::-webkit-scrollbar {
+        width: 8px;
+        height: 8px;
+      }
+      ::-webkit-scrollbar-track {
+        background: #f3f2f2;
+      }
+      ::-webkit-scrollbar-thumb {
+        background: #b0adab;
+        border-radius: 4px;
+      }
+      ::-webkit-scrollbar-thumb:hover {
+        background: #0176d3;
+      }
+      body {
+        background-color: #f3f2f2;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+      }
+    </style>
+    <script type="importmap">
+    {
+      "imports": {
+        "react": "https://aistudiocdn.com/react@^19.2.0",
+        "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+        "reactflow/": "https://aistudiocdn.com/reactflow@^11.11.4/",
+        "react/": "https://aistudiocdn.com/react@^19.2.0/",
+        "reactflow": "https://aistudiocdn.com/reactflow@^11.11.4",
+        "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
+        "file-saver": "https://aistudiocdn.com/file-saver@^2.0.5",
+        "html-to-image": "https://aistudiocdn.com/html-to-image@^1.11.13",
+        "jspdf": "https://aistudiocdn.com/jspdf@^3.0.4"
+      }
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
